--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "restora",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hasankarim18.github.io/restora/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
